--- a/drum.html
+++ b/drum.html
@@ -177,7 +177,7 @@
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span><b>MA</b>racas</span>
                             <input type="checkbox" id="CP-checkbox">
-                            <span>Han<b>C</b>la<b>p</b></span>
+                            <span>Hand<b>C</b>la<b>p</b></span>
                         </div>
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span><b>C</b>ow<b>B</b>all</span>
