--- a/drum.html
+++ b/drum.html
@@ -247,8 +247,8 @@
                         </div>
 
                         <div class="row justify-content-center">
-                            <input type="checkbox" id="a-checkbox" readonly>
-                            <input type="checkbox" id="b-checkbox" readonly>
+                            <input type="checkbox" id="subbeat-checkbox-A" class="subbeat" disabled>
+                            <input type="checkbox" id="subbeat-checkbox-B" class="subbeat" disabled>
                         </div>
                     </div>
                 </div>
