can now play multiple instruments together [IN NEED OF REFACTOR]

--- a/drum.html
+++ b/drum.html
@@ -297,73 +297,73 @@
                     <div class="col-9 row">
                         <div class="col-1">
                             <button class="rhythm-button rhythm-button-orangered ">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="1">
                                 1
                             </button>
                         </div>
                         <div class="col-1">
                             <button class="rhythm-button rhythm-button-orangered ">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="2">
                                 2
                             </button>
                         </div>
                         <div class="col-1">
                             <button class="rhythm-button rhythm-button-orangered ">
-                                <input type="checkbox" class="rhythm-checkbox" >
+                                <input type="checkbox" class="rhythm-checkbox" data-position="3">
                                 3
                             </button>
                         </div>
                         <div class="col-1">
-                            <button class="rhythm-button rhythm-button-orangered ">
-                                <input type="checkbox" class="rhythm-checkbox">
+                            <button class="rhythm-button rhythm-button-orangered " >
+                                <input type="checkbox" class="rhythm-checkbox" data-position="4">
                                 4
                             </button>
                         </div>
                         <div class="col-1">
                             <button class="rhythm-button rhythm-button-orange ">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="5">
                                 5
                             </button>
                         </div>
                         <div class="col-1">
                             <button class="rhythm-button rhythm-button-orange ">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="6">
                                 6
                             </button>
                         </div>
                         <div class="col-1">
                             <button class="rhythm-button rhythm-button-orange ">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="7">
                                 7
                             </button>
                         </div>
                         <div class="col-1">
                             <button class="rhythm-button rhythm-button-orange ">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="8">
                                 8
                             </button>
                         </div>
                         <div class="col-1">
                             <button class="rhythm-button rhythm-button-yellow ">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="9">
                                 9
                             </button>
                         </div>
                         <div class="col-1">
                             <button class="rhythm-button rhythm-button-yellow 0">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="10">
                                 10
                             </button>
                         </div>
                         <div class="col-1">
                             <button class="rhythm-button rhythm-button-yellow 1">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="11">
                                 11
                             </button>
                         </div>
                         <div class="col-1">
                             <button class="rhythm-button rhythm-button-yellow 2">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="12">
                                 12
                             </button>
                         </div>
@@ -372,25 +372,25 @@
                     <div class="col-3 row">
                         <div class="col-3">
                             <button class="rhythm-button rhythm-button-white 3">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="13">
                                 13
                             </button>
                         </div>
                         <div class="col-3">
                             <button class="rhythm-button rhythm-button-white 4">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="14">
                                 14
                             </button>
                         </div>
                         <div class="col-3">
                             <button class="rhythm-button rhythm-button-white 5">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="15">
                                 15
                             </button>
                         </div>
                         <div class="col-3">
                             <button class="rhythm-button rhythm-button-white 6">
-                                <input type="checkbox" class="rhythm-checkbox">
+                                <input type="checkbox" class="rhythm-checkbox" data-position="16">
                                 16
                             </button>
                         </div>
